--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,15 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
     margin: 0;
-    padding-top: 90px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: var(--light-bg-color);
-    color: var(--dark-text-color);
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
 
-body.dark-mode {
-  background-color: var(--dark-bg-color);
-  color: var(--light-text-color);
+    background-color: white;
+    padding-top: 0;
+
+
 }
 /**{*/
 /*    animation: rot 2s infinite;*/
@@ -172,4 +164,12 @@ a {
 }
 .main{
     margin-top: -50px!important;
+}
+
+.card-title {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
